# transjakarta-analytics

./: .env.example  .gitignore  .sqlfluff  LICENSE  README.md
dbt_transjakarta/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml.template
dbt_transjakarta/analyses/: busiest_corridors_by_scheduled_supply.sql  network_pulse_by_hour.sql
dbt_transjakarta/macros/: generate_schema_name.sql  gtfs_time_to_seconds.sql
dbt_transjakarta/models/marts/core/: _core__models.yml  dim_date.sql  dim_route.sql  dim_service.sql  dim_stop.sql  fact_scheduled_stop_event.sql  fact_scheduled_trip.sql
dbt_transjakarta/models/marts/presentation/: _presentation__models.yml  presentation_daily_stop_arrivals.sql  presentation_hourly_network_density.sql  presentation_route_summary.sql
dbt_transjakarta/models/staging/gtfs/: _gtfs__models.yml  _gtfs__sources.yml  stg_gtfs__calendar.sql  stg_gtfs__calendar_dates.sql  stg_gtfs__frequencies.sql  stg_gtfs__routes.sql  stg_gtfs__stop_times.sql  stg_gtfs__stops.sql  stg_gtfs__trips.sql
docs/: architecture.md  data_model.md  gcp_setup.md  index.html  project_state.md
ingestion/: pyproject.toml
ingestion/gtfs/: loader.py
ingestion/jakarta_open_data/: datasets.yml  loader.py
